Dispatcher: Introduce timeout mechanism for infinite loop detection

This patch extends the infinite loop detection mechanism, when its
iteration is expired, wait additional guard time before forcing method to
fail with AE_AML_INFINITE_LOOP. This is useful in case some
hardware/firmware operations really require the AML interpreter to wait
while the old mechanism could expire too fast on recent machines. Reported
by M. Foronda, fixed by Lv Zheng.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=156501
Reported-by: M. Foronda <josemauricioforonda@gmail.com>
Signed-off-by: Lv Zheng <lv.zheng@intel.com>